stytch/stytch_macro/tests/fail/post_wrong_type.rs
use serde::Serialize;
use stytch_macro::post;

#[post(1)]
#[derive(Serialize)]
struct PostNoArgs<'a> {
    id: &'a str,
}

fn main() {}
