stytch/stytch_macro/tests/fail/post_wrong_type.stderr
error: custom attribute panicked
 --> $DIR/post_wrong_type.rs:4:1
  |
4 | #[post(1)]
  | ^^^^^^^^^^
  |
  = help: message: expected 1 string argument, got [1]
